@@ -3,6 +3,8 @@
 version number)
 * stub for XML reporting for BusyBox, not yet used
 * cleanup fsmagic.py, add markers for cpio archives
+* add beginnings of tools to build and query a searchbase with a file name to
+package mapping, useful for quick sweep scanning
 
 2010-05-01
 * remove some calls to addDocument() in the extractkernel* scripts, since they
